k3d/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testapp-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: testapp-backend-service
                port:
                  number: 4040
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextapp-frontend-service
                port:
                  number: 3000
# Domain: example.com
# api.example.com/ --> testapp-backend-service
# example.com --> testapp-frontend-service

# Intern
# localhost:4040 --> testapp-backend-service
# localhost:3000 --> testapp-frontend-service
